Added footer and shifting branch now (starting dev branch)

--- a/enhancements/base/templates/base/main.html
+++ b/enhancements/base/templates/base/main.html
@@ -36,5 +36,13 @@
       </div>
       {% block content %}
       {% endblock %}
+      <div id="page-footer" class="d-flex flex-items-center">
+        <div class="container-xl f6 mt-3">
+          <ul class="list-style-none d-flex text-gray">
+            <li class="mr-3">© 2020</li>
+            <li><a class="link-gray" href="https://gade-raghav.github.io">Raghav Gade</a></li>
+          </ul>
+        </div>
+      </div>
   </body>
 </html>
