--- a/enhancements/base/templates/base/main.html
+++ b/enhancements/base/templates/base/main.html
@@ -23,8 +23,8 @@
             <a href="/" aria-hidden="true">
               <img id="logo" src="{% static 'images/log.png' %}" alt="">
             </a>
-            <a href="/" aria-label="Home" class="h4-mktg text-gray-dark ml-2 no-underline">
-              Enhancements
+            <a href="{% url 'welcome' %}" aria-label="Home" class="h4-mktg text-gray-dark ml-2 no-underline">
+              <i>Enhancements</i>
           </a>
           </div>
           <div id="header-buttons" class="d-flex flex-items-end">
@@ -39,7 +39,6 @@
       <div id="page-footer" class="d-flex flex-items-center">
         <div class="container-xl f6 mt-3">
           <ul class="list-style-none d-flex text-gray">
-            <li class="mr-3">© 2020</li>
             <li><a class="link-gray" href="https://gade-raghav.github.io">Raghav Gade</a></li>
           </ul>
         </div>
