--- a/enhancements/base/templates/base/welcome.html
+++ b/enhancements/base/templates/base/welcome.html
@@ -1,8 +1,7 @@
 {% extends 'base/main.html' %}
 {% load static %}
-
 {% block content %}
-
+{% include 'base/messages.html' %}
 
 <main class="container-xl px-3 pb-4">
     <div class="d-flex flex-wrap flex-items-center flex-justify-center">
@@ -37,6 +36,14 @@
       <p><i>Enhancements</i> is a <b class=" Box border-green mr-1 p-1">beta</b> release. <a href="{% url 'feedback' %}">Give feedback</a>.</p>
     </div>
   </main>
+
+  <script>
+    setTimeout(function(){
+			if ($('#msg').length > 0) {
+				$('#msg').fadeIn( 400 ).delay( 1500 ).fadeOut( 400 );
+			}
+        });
+  </script>
   
 
 {% endblock %}
