--- a/enhancements/base/templates/base/feedback.html
+++ b/enhancements/base/templates/base/feedback.html
@@ -51,6 +51,7 @@
           {% csrf_token %}
           {{ form|crispy}}
           <button type="submit" class="btn btn-primary">Submit</button>
+          <a class="btn btn-sm btn-danger "  href="{% url 'home' %}">Cancel</a>
           </form>
           </div>
         </div>
