--- a/enhancements/base/templates/base/newproject.html
+++ b/enhancements/base/templates/base/newproject.html
@@ -13,6 +13,7 @@
             {{ form.media}}
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Submit</button>
+            <a class="btn btn-sm btn-danger "  href="{% url 'home' %}">Cancel</a>
         </form>
     
   </main>
