--- a/enhancements/base/templates/base/features.html
+++ b/enhancements/base/templates/base/features.html
@@ -1,5 +1,6 @@
 {% extends 'base/main.html' %}
 {% load static %}
+{% load humanize %}
 
   {% block title %}Enhancements{% endblock %}
 
@@ -59,17 +60,7 @@
             {% if project.features is True %}
             <li class="Box-row Box-row--hover-gray p-0 mt-0">
                 <div class="ml-2 p-2 col-12">
-                  <span class="tooltipped tooltipped-e float-left" aria-label="Closed ticket">
-                    <span class="v-align-middle">
-                      {% if feature.status == "Working" %}
-                      <svg id="working" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
-                      {% elif feature.status == "Completed" %}
-                      <svg id="completed" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg>
-                      {% elif feature.status == "Queued" %}
-                      <svg id="queued" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
-                      {% endif %}
-                    </span>
-                  </span>
+                  
 
                   <div class="col-12 clearfix">
                     <div class="col-6 pl-2 min-width-0 float-left"> 
@@ -77,21 +68,38 @@
                             <button class="btn btn-primary" style="pointer-events: none;">{{ project.project_title }}</button>
                             <div class="Popover position-relative">
                                 <div class="Popover-message Popover-message--left-top p-4 ml-2 Box box-shadow-large" style="width: max-content;" >
-                                <h4 class="mb-2">
+                                  <b>Features</b>
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"></path></svg></a>
+                                    <br>
+                                <h4 class="mb-2 pl-2">
                                     {% for feature in features %}
                                     {% if feature.feature_id.project_id == project.project_id %}
+                                    <h4 class="mb-2 pl-2">
+                                    <hr>
                                     <ul >
-                                    <li >
                                     {% if request.user.is_authenticated %}
-                                    <a class="link-gray-dark no-underline v-align-middle h4" href="#">{{feature.feature_name}}</a> 
+                                    {% if feature.status == "Working" %}
+                                        <svg id="working" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
+                                        {% elif feature.status == "Completed" %}
+                                        <svg id="completed" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg>
+                                        {% elif feature.status == "Queued" %}
+                                        <svg id="queued" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
+                                    {% endif %}
+                                    &nbsp;
+                                    <a class="link-gray-dark no-underline v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a> 
                                     {% else %}
                                     <a class="link-gray-dark no-underline v-align-middle h4" href="#">{{feature.feature_name}}</a>
                                     {% endif %}
-                                    </li>
-                                    </ul>
+                                        </ul>
+                                    </h4>
+                                    <p style="font-size: small;"> 
+                                    created <relative-time datetime="2020-08-25T06:16:01Z" class="no-wrap">{{feature.date_created}}</relative-time>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    updated <relative-time datetime="2020-08-25T06:31:06" class="no-wrap">{{feature.updated_at|naturaltime}}</relative-time>
+                                    </p>
                                     {% endif %}
                                     {% endfor %}
-                                </h4>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
