--- a/enhancements/static/css/main.css
+++ b/enhancements/static/css/main.css
@@ -15,3 +15,18 @@
     z-index: 1;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+ #completed{
+    color: green;
+  }
+
+  #working{
+    color: orange;
+  }
+
+  #queued{
+    color: red;
+  }
+
+  svg{
+    fill: currentColor;
+  }
