Edits to features option

--- a/enhancements/base/templates/base/main.html
+++ b/enhancements/base/templates/base/main.html
@@ -62,7 +62,7 @@
       <div id="page-footer" class="d-flex flex-items-center">
         <div class="container-xl f6 mt-3">
           <ul class="list-style-none d-flex text-gray">
-            <li><a class="link-gray" href="https://gade-raghav.github.io">Raghav Gade</a></li>
+            <li><a class="link-gray" href="https://gade-raghav.github.io" target="blank">Raghav Gade</a></li>
           </ul>
         </div>
       </div>
