--- a/enhancements/base/templates/base/specificfeature.html
+++ b/enhancements/base/templates/base/specificfeature.html
@@ -9,6 +9,11 @@
     </style>
 
 {% block content %}    
+<meta charset="UTF-8">
+  <title>Title</title>
+  <link href="{% static 'mdeditor/css/editormd.min.css' %}" rel="stylesheet">
+  <link href="{% static 'mdeditor/css/editormd.preview.css' %}" rel="stylesheet">
+  <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
 
 <div class="container-lg px-3 pt-6 pb-4">
 <div class="card col-12">
@@ -18,10 +23,47 @@
         </div>
       </div>
     <p style="font-size: 30px;">{{ feature.feature_name }}</p>
-    Added this feature {{feature.updated_at|naturaltime}}: 1 comment
+    <p><div id="content"><textarea>{{ feature.feature_description }}</textarea></div></p>
+     <p style="color: gray;">&nbsp;updated {{feature.updated_at|naturaltime}}</p>
+    {% if feature.status == "Working" %}
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: orange; border-radius: 15px; color: white;"><svg style="color: white; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>&nbsp;Working</a> 
+    {% elif feature.status == "Completed" %}
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: green; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg> &nbsp;Completed</a>
+    {% elif feature.status == "Discarded" %}
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: #D73A49; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg> &nbsp;Discarded</a> 
+    {% endif %} 
+
     <hr>
 </div>
 </div>
+<script src="{% static 'mdeditor/js/jquery.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/marked.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/prettify.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/raphael.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/underscore.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/sequence-diagram.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/flowchart.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/jquery.flowchart.min.js' %}"></script>
+<script>
+  $(function () {
+      // js 解析markdown
+      editormd.markdownToHTML("content", {
+          //htmlDecode      : "style,script,iframe",  // you can filter tags decode
+          emoji           : true,
+          taskList        : true,
+          tex             : true,  // 默认不解析
+          flowChart       : true,  // 默认不解析
+          sequenceDiagram : true,  // 默认不解析
+      });
+
+
+      $(".reference-link").each(function (i,obj) {
+        console.log(obj)
+      })
+  })
+
+</script>
 
 {% endblock %}
 
