--- a/enhancements/base/templates/base/specificfeature.html
+++ b/enhancements/base/templates/base/specificfeature.html
@@ -1,19 +1,22 @@
 {% extends 'base/main.html'%}
 {% load static %}
 {% load humanize %}
+{% load crispy_forms_tags%}
 
     <style>
         .container-lg{
             margin-top: 40px;
         }
+    
+        .frame-example { min-height: 500px; } 
     </style>
 
 {% block content %}    
 <meta charset="UTF-8">
-  <title>Title</title>
   <link href="{% static 'mdeditor/css/editormd.min.css' %}" rel="stylesheet">
   <link href="{% static 'mdeditor/css/editormd.preview.css' %}" rel="stylesheet">
   <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
+  <link href="https://unpkg.com/@github/details-dialog-element/dist/index.css" rel="stylesheet" />
 
 <div class="container-lg px-3 pt-6 pb-4">
 <div class="card col-12">
@@ -23,18 +26,63 @@
         </div>
       </div>
     <p style="font-size: 30px;">{{ feature.feature_name }}</p>
-    <p><div id="content"><textarea>{{ feature.feature_description }}</textarea></div></p>
-     <p style="color: gray;">&nbsp;updated {{feature.updated_at|naturaltime}}</p>
+    <p  class="pt-2" style="color: gray;">&nbsp;#{{feature.tracking_id}} updated {{feature.updated_at|naturaltime}}</p>
     {% if feature.status == "Working" %}
-    <a class=" btn btn-sm btn " style="width: 110px; background-color: orange; border-radius: 15px; color: white;"><svg style="color: white; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>&nbsp;Working</a> 
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: orange; pointer-events: none; border-radius: 15px; color: white;"><svg style="color: white; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>&nbsp;Working</a> 
     {% elif feature.status == "Completed" %}
-    <a class=" btn btn-sm btn " style="width: 110px; background-color: green; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg> &nbsp;Completed</a>
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: green; pointer-events: none; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg> &nbsp;Completed</a>
     {% elif feature.status == "Discarded" %}
-    <a class=" btn btn-sm btn " style="width: 110px; background-color: #D73A49; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg> &nbsp;Discarded</a> 
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: #D73A49; pointer-events: none; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg> &nbsp;Discarded</a> 
     {% endif %} 
-
     <hr>
-
+    <p><div id="content"><textarea>{{ feature.feature_description }}</textarea></div></p>
+    
+    
+      <hr>
+      {% if request.user.is_authenticated %}
+        <details class="details-reset details-overlay details-overlay-dark">
+            <summary class="btn" aria-haspopup="dialog" style="border-radius: 15px; background-color: #0069D9; color:white; ">Add progress</summary>
+            <details-dialog class="Box Box--overlay d-flex flex-column anim-fade-in fast">
+                <div class="Box-header">
+                <h3 class="Box-title">Add progress</h3>
+                </div>
+                <div class="overflow-auto">
+                <div class="Box-body overflow-auto">
+                    <form action="" autocomplete="off" method="POST">
+                        {% csrf_token %}
+                        {{ form.media}}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <a class="btn btn-sm btn-danger "  href="{% url 'specificfeature' feature.tracking_id %}">Cancel</a>
+                    </form>
+                </div>
+            </details-dialog>
+        </details>
+        {% endif %}
+        <br>
+    {% for pro in progress %}
+    {% if pro.tracking.tracking_id == feature.tracking_id %}
+    <div class="TimelineItem TimelineItem--condensed">
+        <div class="TimelineItem-badge">
+            <svg class="octicon octicon-git-commit" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
+            <path fill-rule="evenodd" d="M10.86 7c-.45-1.72-2-3-3.86-3-1.86 0-3.41 1.28-3.86 3H0v2h3.14c.45 1.72 2 3 3.86 3 1.86 0 3.41-1.28 3.86-3H14V7h-3.14zM7 10.2c-1.22 0-2.2-.98-2.2-2.2 0-1.22.98-2.2 2.2-2.2 1.22 0 2.2.98 2.2 2.2 0 1.22-.98 2.2-2.2 2.2z"></path>
+            </svg>
+        </div>
+        <div class="TimelineItem-body">
+            <p>
+            {{ pro.tracker_description}}
+            </p>
+            <span class="text-small text-gray mr-2">#{{pro.trackerid}} updated {{ pro.updated_at|naturaltime}} </span>
+                <span class="Progress Progress--small d-inline-flex" style="width: 160px">
+                <div class="Progress-item bg-green" style="width: {{pro.progress_percentage}}%"></div>
+            </span>
+            <br>
+            <br>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+    <br>
 </div>
 </div>
 <script src="{% static 'mdeditor/js/jquery.min.js' %}"></script>
