--- a/enhancements/base/templates/base/projects.html
+++ b/enhancements/base/templates/base/projects.html
@@ -32,7 +32,7 @@
                 <a class="UnderlineNav-item" href="{% url 'home' %}"  aria-current=&quot;page&quot;>Projects</a>
                 &nbsp;
                 &nbsp;
-                <a class="UnderlineNav-item" href="{% url 'features' %}"  aria-current=&quot;page&quot;>Features</a>
+                <a class="UnderlineNav-item" href="{% url 'features' %}"  aria-current=&quot;page&quot;>Enhancements</a>
               </div>
               <div class="UnderlineNav-actions">
                 {% if request.user.is_authenticated %}
