--- a/enhancements/base/templates/base/features.html
+++ b/enhancements/base/templates/base/features.html
@@ -42,7 +42,7 @@
                   <a class="UnderlineNav-item" href="{% url 'home' %}"  aria-current=&quot;page&quot;>Projects</a>
                   &nbsp;
                   &nbsp;
-                  <a class="UnderlineNav-item" href="{% url 'features' %}"  aria-current=&quot;page&quot;>Features</a>
+                  <a class="UnderlineNav-item" href="{% url 'features' %}"  aria-current=&quot;page&quot;>Enhancements</a>
                 </div>
                 <div class="UnderlineNav-actions">
                   {% if request.user.is_authenticated %}
@@ -68,7 +68,7 @@
                             <button class="btn btn-primary" style="pointer-events: none;">{{ project.project_title }}</button>
                             <div class="Popover position-relative">
                                 <div class="Popover-message Popover-message--left-top p-4 ml-2 Box box-shadow-large" style="width: max-content;" >
-                                  <b>Features</b>
+                                  <b>Enhancements</b>
                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'newfeature' %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"></path></svg></a>
                                     <br>
                                     {% for feature in features %}
@@ -86,7 +86,6 @@
                                             {% endif %}
                                         &nbsp;
                                         <a class="link-gray-dark no-underline v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a> 
-                                        &nbsp;<a href="{% url 'featureedit' feature.tracking_id %}" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a>
                                         {% else %}
                                             {% if feature.status == "Working" %}
                                             <svg id="working" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
