--- a/enhancements/base/templates/base/main.html
+++ b/enhancements/base/templates/base/main.html
@@ -43,12 +43,14 @@
           </div>
           {% if request.user.is_authenticated %}
           <div id="header-buttons" class="d-flex flex-items-end">
+                <a href="#"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/dude.jpeg' %}"  style="border-radius: 30px;" width="48" height="48" title="Raghav Gade"/></a>
                 <form id="github-signout" >
                   <b><a href="{% url 'signout'%}">Sign out</a></b>
                 </form>       
           </div>
           {% else %}
           <div id="header-buttons" class="d-flex flex-items-end">
+                <a href="#"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/dude.jpeg' %}"  style="border-radius: 30px;" width="48" height="48" title="Raghav Gade"/></a>
                 <form id="github-signout" >
                   <b><a href="{% url 'signin'%}">Admin-SignIn</a></b>
                 </form>       
