--- a/enhancements/base/templates/base/newfeature.html
+++ b/enhancements/base/templates/base/newfeature.html
@@ -7,7 +7,7 @@
 
 
 <main class="container-lg px-3 pb-4">
-    <h1 class="border-bottom h1 my-3 my-lg-4">Add new project</h1>
+    <h1 class="border-bottom h1 my-3 my-lg-4">Add new feature</h1>
         <form action="" autocomplete="off" method="POST">
             {% csrf_token %}
             {{ form.media}}
