Added all SUPC features

--- a/enhancements/base/templates/base/editprogress.html
+++ b/enhancements/base/templates/base/editprogress.html
@@ -21,7 +21,7 @@
             {{ form.media}}
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Submit</button>
-            <a class="btn btn-sm btn-danger "  href="{% url 'home' %}">Cancel</a>
+            <a class="btn btn-sm btn-danger "  href="javascript:window.history.back()">Cancel</a>
         </form>
     
 </main>
