--- a/enhancements/base/templates/base/welcome.html
+++ b/enhancements/base/templates/base/welcome.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="pt-2 text-center">
-      <a href="{% url 'home' %}" role="button" class="btn-mktg mt-2 bg-blue" data-ga-click="Intro, my tickets">View My Projects</a>
+      <a href="{% url 'home' %}" role="button" class="btn-mktg mt-2 bg-blue" data-ga-click="Intro, my tickets">View Projects</a>
     </div>
   
     <hr class="p-2">
