--- a/enhancements/base/templates/base/specificfeature.html
+++ b/enhancements/base/templates/base/specificfeature.html
@@ -29,7 +29,7 @@
     </p>
     <p  class="pt-2" style="color: gray;">&nbsp;#{{feature.tracking_id}} updated {{feature.updated_at|naturaltime}} &nbsp;<a href="{% url 'featureedit' feature.tracking_id %}" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a></p>
     {% if feature.status == "Working" %}
-    <a class=" btn btn-sm btn " style="width: 110px; background-color: orange; pointer-events: none; border-radius: 15px; color: white;"><svg style="color: white; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>&nbsp;Working</a> 
+    <a class=" btn btn-sm btn " style="width: 110px; background-color: orange; pointer-events: none; border-radius: 15px; color: white;"><svg class="octicon anim-pulse" style="color: red; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>&nbsp;Working</a> 
     {% elif feature.status == "Completed" %}
     <a class=" btn btn-sm btn " style="width: 110px; background-color: #28A745; pointer-events: none; border-radius: 15px; color: white;"><svg style="color: white;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg> &nbsp;Completed</a>
     {% elif feature.status == "Discarded" %}
@@ -37,7 +37,7 @@
     {% endif %} 
     <br> 
     {% if percent != 0 %}
-    <span class="Progress Progress--small" style="width:300px">
+    <span class="Progress Progress--small anim-grow-x" style="width:200px">
     <span class="Progress-item bg-green" style="width: {{percent}}%;"></span>
     </span>
     {% endif %}
