--- a/enhancements/base/templates/base/specificfeature.html
+++ b/enhancements/base/templates/base/specificfeature.html
@@ -37,7 +37,7 @@
     {% endif %} 
     <br> 
     {% if percent != 0 %}
-    <span class="Progress Progress--small anim-grow-x" style="width:200px">
+    <span class="Progress Progress--small" style="width:300px">
     <span class="Progress-item bg-green" style="width: {{percent}}%;"></span>
     </span>
     {% endif %}
