--- a/enhancements/base/templates/base/specificblog.html
+++ b/enhancements/base/templates/base/specificblog.html
@@ -33,11 +33,6 @@
 
     <div id="page-header" style="background-color: #0f161e; color: #d3d4d4;" >
         <header class="container-xl px-3 px-md-6 py-3 position-relative d-flex flex-justify-between width-full">
-            <div id="support-logo" class="d-flex flex-items-end">
-            <span class="anim-fade-in">
-               <i style="color: #d3d4d4; font-size: medium;">Enhancements-</i><b style="color: #d3d4d4;">BLOG</b>
-            </span>
-          </div>
           <div id="support-logo" class="d-flex flex-items-end">
           </div>
           <div id="header-buttons" class="d-flex flex-items-end">
@@ -53,49 +48,22 @@
                 </form>       
           </div>
         </header>
-      </div>
-      <!---->
-      <main class="container-lg px-6 pb-4">
-        <div class="col-12 clearfix mt-2">
-            <div class="d-flex float-right">
-            <div class="Box border-green mr-1"><b class="p-1">beta</b></div>
-            <a class="link-gray float-right" href="{% url 'feedback' %}" style="color:#d3d4d4; text-decoration: none; ">Give feedback</a>
+    </div>
+
+    <main class="container-lg px-6 pb-4">
+        <div class="m-2" style=" margin: auto; background-color: #0f161e; color: white; border-radius: 5px;">
+            <div class=" mb-2 pr-4  text-small text-gray float-right">
+                <a href="{%url 'blog'%}" style="text-decoration: none; color: rgb(255, 255, 255);"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="34" height="34"><path fill-rule="evenodd" d="M10.78 19.03a.75.75 0 01-1.06 0l-6.25-6.25a.75.75 0 010-1.06l6.25-6.25a.75.75 0 111.06 1.06L5.81 11.5h14.44a.75.75 0 010 1.5H5.81l4.97 4.97a.75.75 0 010 1.06z"></path></svg></a>
+            </div>
+            <br>
+            <div class="m-4" >
+            <h1 class="pt-4 pb-4">{{blog.blog_title}}</h1>
+            <div class="pb-4" style="color: rgb(255, 255, 255);" id="content"><textarea>{{ blog.blog }}</textarea></div>
             </div>
         </div>
-        <div class=" px-6 mt-8" style="color: #d3d4d4;">
-          {% for blog in blogs %}
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                    <svg class="octicon octicon-git-commit" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.86 7c-.45-1.72-2-3-3.86-3-1.86 0-3.41 1.28-3.86 3H0v2h3.14c.45 1.72 2 3 3.86 3 1.86 0 3.41-1.28 3.86-3H14V7h-3.14zM7 10.2c-1.22 0-2.2-.98-2.2-2.2 0-1.22.98-2.2 2.2-2.2 1.22 0 2.2.98 2.2 2.2 0 1.22-.98 2.2-2.2 2.2z"></path>
-                    </svg>
-                </div>
+    </main>
 
-                <div class="TimelineItem-body" style=" margin: auto; background-color: #0f161e; color: white; border-radius: 5px;">
-                        <div class="m-4">
-                            <h2><a style="text-decoration: none; color: #d3d4d4;" href="{% url 'sblog' blog.id %}">{{blog.blog_title}}</a> &nbsp;
-                                {%if request.user.is_authenticated %}
-                                 <a style="text-decoration: none; color:rgb(245, 169, 182) ;" href="{%url 'blog' %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a>
-                                {% endif %}
-                            </h2>
-                            <br>
-                            <p style="font-size: 16px;">{{ blog.blog_description }}</p>
-                            <p><a href="{% url 'sblog' blog.id %}" style=" text-decoration: none; color: rgb(245, 169, 182);">READ MORE</a></p>
-                            <div class="col-4 mb-2 offset-10 text-small text-gray float-left">
-                                <relative-time class="no-wrap"></relative-time>{{blog.date_created|naturaltime}}</relative-time>
-                            </div>
-                        
-                        </div>
-                    
-                </div>
-            </div>
-
-
-          {% endfor %}
-      </div>
-      </main>
-      <!---->
-      <div id="page-footer" class="d-flex flex-items-center" style="color: #d3d4d4;" >
+    <div id="page-footer" class="d-flex flex-items-center" style="color: #d3d4d4;" >
         <div class="container-xl f6 mt-3">
           <ul class="list-style-none d-flex text-gray">
             <li><a href="https://www.instagram.com/raghavgade" target="blank"><img style="width: 15px;" src="{% static 'images/igb.png' %}" alt=""></a></li>
@@ -103,12 +71,39 @@
             &nbsp;
             <li><a style="text-decoration: none; color: black;" target="blank" href="https://github.com/gade-raghav"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg></a></li> 
             &nbsp;
-            &nbsp;
+            &nbsp;  
             <li><a class="link-gray" href="https://gade-raghav.github.io" target="blank">Raghav Gade</a></li>
           </ul>
         </div>
-      </div>
-      <br>
+    </div>
+    <br>
   </body>
+  <script src="{% static 'mdeditor/js/jquery.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/marked.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/prettify.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/raphael.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/underscore.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/sequence-diagram.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/flowchart.min.js' %}"></script>
+  <script src="{% static 'mdeditor/js/lib/jquery.flowchart.min.js' %}"></script>
+  <script>
+  $(function () {
+      // js 解析markdown
+      editormd.markdownToHTML("content", {
+          //htmlDecode      : "style,script,iframe",  // you can filter tags decode
+          emoji           : true,
+          taskList        : true,
+          tex             : true,  // 默认不解析
+          flowChart       : true,  // 默认不解析
+          sequenceDiagram : true,  // 默认不解析
+      });
+
+
+      $(".reference-link").each(function (i,obj) {
+        console.log(obj)
+      })
+  })
+</script>
   <script src="/static/mdeditor/languages/en.js"></script>
 </html>
