--- a/enhancements/base/templates/base/main.html
+++ b/enhancements/base/templates/base/main.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
-    <link rel="shortcut icon" href="{% static 'images/log.png' %}">
+    <link rel="shortcut icon" href="{% static 'images/offlog3.png' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
     <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@
           <div id="support-logo" class="d-flex flex-items-end">
             <span class="anim-fade-in">
               <a href="/" aria-hidden="true">
-                <img id="logo" src="{% static 'images/log.png' %}" alt="">
+                <img id="logo" src="{% static 'images/offlog3.png' %}" alt="">
               </a>
               <a href="{% url 'welcome' %}" aria-label="Home" class="h4-mktg text-gray-dark ml-2 no-underline">
                <i>Enhancements</i>
