--- a/enhancements/base/templates/base/newfeature.html
+++ b/enhancements/base/templates/base/newfeature.html
@@ -1,5 +1,5 @@
 {% extends 'base/main.html'%}
-{% block title %}New feature - Enhancements{% endblock %}
+{% block title %}Enhancements-add{% endblock %}
 {% load static %}
 {% block content%}
 {% load crispy_forms_tags%}
