--- a/enhancements/base/templates/base/profile.html
+++ b/enhancements/base/templates/base/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base/main.html' %}
+{% block title %}Enhancements-Profile*{% endblock %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% block content %}
