--- a/enhancements/base/templates/base/projects.html
+++ b/enhancements/base/templates/base/projects.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 
-  {% block title %}Projects{% endblock %}
+  {% block title %}Enhancements-Projects{% endblock %}
 
 
   {% block content%}
