--- a/enhancements/base/templates/base/specificproject.html
+++ b/enhancements/base/templates/base/specificproject.html
@@ -1,6 +1,6 @@
 {% extends 'base/main.html'%}
 {% load static %}
-{% block title %} Enhancements-specific {% endblock %}
+{% block title %} Enhancements-{{project.project_title}} {% endblock %}
 {% load humanize %}
 {% load crispy_forms_tags%}
 
