--- a/enhancements/base/templates/base/blog.html
+++ b/enhancements/base/templates/base/blog.html
@@ -4,8 +4,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %}</title>
-    <link rel="shortcut icon" href="{% static 'images/log.png' %}">
+    <title>Enhancements-BLOG</title>
+    <link rel="shortcut icon" href="{% static 'images/offlog3.png' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
     <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
@@ -29,12 +29,17 @@
 		}
 </style>
   </head>
+
   <body style="background-color: #061f2f; " >
+    {% include 'base/messages.html' %}
 
     <div id="page-header" style="background-color: #0f161e; color: #d3d4d4;" >
         <header class="container-xl px-3 px-md-6 py-3 position-relative d-flex flex-justify-between width-full">
             <div id="support-logo" class="d-flex flex-items-end">
             <span class="anim-fade-in">
+              <a href="/" aria-hidden="true">
+                <img id="logo" src="{% static 'images/offlog3.png' %}" alt="">
+              </a>
                <i style="color: #d3d4d4; font-size: medium;">Enhancements-</i><b style="color: #d3d4d4;">BLOG</b>
             </span>
           </div>
@@ -75,7 +80,7 @@
                         <div class="m-4">
                             <h2><a style="text-decoration: none; color: #d3d4d4;" href="{% url 'sblog' blog.id %}">{{blog.blog_title}}</a> &nbsp;
                                 {%if request.user.is_authenticated %}
-                                 <a style="text-decoration: none; color:rgb(245, 169, 182) ;" href="{%url 'blog' %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a>
+                                 <a style="text-decoration: none; color:rgb(245, 169, 182) ;" href="{%url 'blogedit' blog.id %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a>
                                 {% endif %}
                             </h2>
                             <br>
@@ -86,7 +91,6 @@
                             </div>
                         
                         </div>
-                    
                 </div>
             </div>
 
@@ -110,5 +114,12 @@
       </div>
       <br>
   </body>
+  <script>
+    setTimeout(function(){
+			if ($('#msg').length > 0) {
+				$('#msg').fadeIn( 400 ).delay( 1500 ).fadeOut( 400 );
+			}
+        });
+</script>
   <script src="/static/mdeditor/languages/en.js"></script>
 </html>
