--- a/enhancements/base/templates/base/featureedit.html
+++ b/enhancements/base/templates/base/featureedit.html
@@ -1,5 +1,5 @@
 {% extends 'base/main.html'%}
-{% block title %}Edit project - Enhancements{% endblock %}
+{% block title %}Enhancements-edit{% endblock %}
 {% load static %}
 {% block content%}
 {% load crispy_forms_tags%}
