--- a/enhancements/base/templates/base/projectedit.html
+++ b/enhancements/base/templates/base/projectedit.html
@@ -1,5 +1,5 @@
 {% extends 'base/main.html'%}
-{% block title %}New project - Enhancements{% endblock %}
+{% block title %}Enhancements-Project*{% endblock %}
 {% load static %}
 {% block content%}
 {% load crispy_forms_tags%}
