Some changes in welcome page

--- a/base/templates/base/welcome.html
+++ b/base/templates/base/welcome.html
@@ -13,6 +13,8 @@
     </div>
     <div class="pt-2 text-center">
       <a href="{% url 'home' %}" role="button" class="btn-mktg mt-2 bg-blue" data-ga-click="Intro, my tickets">View Projects</a>
+      <br>
+      <a href="https://enhancements.herokuapp.com/blog/2" role="button" class="btn-mktg mt-2 bg-blue" data-ga-click="Intro, my tickets">About Enhancements</a>
     </div>
   
     <hr class="p-2">
