Suggestion to Update conversion

--- a/base/templates/base/specificfeature.html
+++ b/base/templates/base/specificfeature.html
@@ -94,7 +94,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" color="green"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM0 8a8 8 0 1116 0A8 8 0 010 8zm11.78-1.72a.75.75 0 00-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 00-1.06 1.06l2 2a.75.75 0 001.06 0l4.5-4.5z"></path></svg>
             {% endif %}
             {% elif pro.comment_type == "Suggestion" %}
+            {% if pro.converted == True %}
             <span class="IssueLabel IssueLabel--big bg-yellow text-gray-dark mr-1" >Suggestion</span>
+            <b><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8.22 2.97a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06l2.97-2.97H3.75a.75.75 0 010-1.5h7.44L8.22 4.03a.75.75 0 010-1.06z"></path></svg> </b>
+            <span class="IssueLabel IssueLabel--big bg-green text-white mr-1" >Update</span> 
+            {% else %}
+            <span class="IssueLabel IssueLabel--big bg-yellow text-gray-dark mr-1" >Suggestion</span>
+            {% endif %}
             {% else %}
             <span class="IssueLabel IssueLabel--big bg-green text-white mr-1" >Update</span>
             {% endif %}
